feat: use dtos and domain models for officers (#186)
* use dtos and domain models in officer code

* update docs and officer fixtures

* fix officer post client

* fix officer put client

* fix GetOfficer returning a domain model

* fix uuid showing up as empty string

* regen swag docs

* write dto models in list officers

---------
